--- a/argocd/declarative/manifests/deployment.yml
+++ b/argocd/declarative/manifests/deployment.yml
@@ -18,3 +18,11 @@ spec:
         image: docker.io/kostiscodefresh/gitops-simple-app:v1.0
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 100m
+            memory: 128Mi
+
