fix: docker compose for mac

--- a/prometheus_grafana/WeatherAPI/prometheus.yml
+++ b/prometheus_grafana/WeatherAPI/prometheus.yml
@@ -6,5 +6,5 @@ scrape_configs:
     scheme: 'http'
     static_configs:
       - targets: [
-        'localhost:5076',
+        'host.docker.internal:5999',
       ]
