--- a/argocd/simple-app/deployment.yml
+++ b/argocd/simple-app/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: docker.io/kostiscodefresh/gitops-simple-app:v1.0emmfwkejf
+        image: docker.io/kostiscodefresh/gitops-simple-app:v1.0
         ports:
         - containerPort: 8080
         resources:
