feat: migrates random data

--- a/migrations/MigrationsWeatherAPI/appsettings.json
+++ b/migrations/MigrationsWeatherAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MasterConnection": "Persist Security Info=False;User ID=sa;Password=yourStrong(!)Password;Initial Catalog=master;Server=localhost;TrustServerCertificate=True;",
+    "DefaultConnection": "Persist Security Info=False;User ID=sa;Password=yourStrong(!)Password;Initial Catalog=Weather;Server=localhost;TrustServerCertificate=True;"
+  }
 }
