feat: manually commit offsets

--- a/kafka/KafkaFlowConsumer/appsettings.json
+++ b/kafka/KafkaFlowConsumer/appsettings.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Confluent.Kafka": "Debug"
     }
   },
   "Kafka": {
     "Host": "localhost:29092",
     "ConsumerGroup": "kafka_flow_workshop",
-    "BatchMessageLimit": 20,
+    "BatchMessageLimit": 5,
     "BatchTimeLimit": 1000,
     "Weather": {
       "Topic": "weather",
