--- a/kafka/KafkaFlowConsumer/appsettings.json
+++ b/kafka/KafkaFlowConsumer/appsettings.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Confluent.Kafka": "Debug"
+      "Confluent.Kafka": "Information",
+      "KafkaFlow": "Debug",
+      "KafkaFlowConsumer":  "Information"
     }
   },
   "Kafka": {
