--- a/kafka/KafkaFlowConsumer/KafkaFlowConsumer.csproj
+++ b/kafka/KafkaFlowConsumer/KafkaFlowConsumer.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="KafkaFlow.Serializer" Version="2.5.1" />
     <PackageReference Include="KafkaFlow.Serializer.JsonCore" Version="3.0.8" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
   </ItemGroup>
 </Project>
