--- a/kafka/KafkaFlowConsumer/appsettings.json
+++ b/kafka/KafkaFlowConsumer/appsettings.json
@@ -1,21 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Confluent.Kafka": "Information",
-      "KafkaFlow": "Debug",
-      "KafkaFlowConsumer":  "Information"
-    }
+      "Override": {
+        "Microsoft.AspNetCore": "Debug",
+        "System": "Warning",
+        "TinyHealthCheck": "Warning",
+        "Confluent.Kafka": "Debug",
+        "KafkaFlow": "Debug",
+        "KafkaFlowConsumer":  "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fffZ} [{Level:u}] {SourceContext} {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
   },
   "Kafka": {
     "Host": "localhost:29092",
     "ConsumerGroup": "kafka_flow_workshop",
+    "BufferSize": 100,
     "BatchMessageLimit": 5,
     "BatchTimeLimit": 1000,
     "Weather": {
       "Topic": "weather",
-      "Enabled": true
+      "Enabled": true,
+      "Workers": 3
     }
   }
 }
