feat: separate test configurations

--- a/kafka/KafkaFlowConsumer/appsettings.json
+++ b/kafka/KafkaFlowConsumer/appsettings.json
@@ -8,7 +8,7 @@
         "TinyHealthCheck": "Warning",
         "Confluent.Kafka": "Debug",
         "KafkaFlow": "Debug",
-        "KafkaFlowConsumer":  "Information"
+        "KafkaFlowConsumer":  "Debug"
       }
     },
     "WriteTo": [
