feat: docs, kakfa ui and polly

--- a/kafka/KafkaFlowConsumer/appsettings.json
+++ b/kafka/KafkaFlowConsumer/appsettings.json
@@ -6,9 +6,9 @@
         "Microsoft.AspNetCore": "Debug",
         "System": "Warning",
         "TinyHealthCheck": "Warning",
-        "Confluent.Kafka": "Debug",
-        "KafkaFlow": "Debug",
-        "KafkaFlowConsumer":  "Debug"
+        "Confluent.Kafka": "Information",
+        "KafkaFlow": "Information",
+        "KafkaFlowConsumer":  "Information"
       }
     },
     "WriteTo": [
