--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   zookeeper:
     image: 'bitnami/zookeeper:3.7'
@@ -37,6 +36,26 @@ services:
       - zookeeper
     networks:
       - public
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'
+      KAFKA_CLUSTERS_0_NAME: kafka
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    depends_on:
+      - kafka
+    networks:
+      - public
+    ports:
+      ## Kafka UI can be accessed at http://localhost:8082
+      - '8082:8080'
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider localhost:8080 || exit 1
+      interval: 5s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
 networks:
   public:
